--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +29,8 @@
     "@types/node-cron": "^3.0.7",
     "@types/nodemailer": "^6.4.8",
     "jest": "^29.5.0",
+    "jest-mock-axios": "^4.7.2",
+    "jest-mock-express": "^0.1.1",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
